test/files/neg/t7872b.check
t7872b.scala:8: error: contravariant type a occurs in covariant position in type [-a]List[a] of value <local l>
  def oops1 = down[({type l[-a] = List[a]})#l](List('whatever: Object)).head + "oops"
                          ^
t7872b.scala:19: error: covariant type a occurs in contravariant position in type [+a]a => String of value <local l>
  def oops2 = up[({type l[+a] = Stringer[a]})#l]("printed: " + _)
                        ^
2 errors
